--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "deploy": "node scripts/deploy.js",
     "dev": "next dev",
     "build": "npx hardhat compile && next build",
-    "start": "npx hardhat compile && npm run deploy && npm run dev",
+    "start": "concurrently \"npx hardhat compile\" \"npm run deploy\" \"npm run dev\"",
     "start:next": "next start",
     "lint": "next lint"
   },
@@ -34,6 +34,7 @@
     "bootstrap": "^5.1.3",
     "chai": "^4.3.4",
     "classnames": "^2.3.1",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "deficonnect": "^1.1.14",
